--- a/reproduction.Rmd
+++ b/reproduction.Rmd
@@ -103,8 +103,6 @@ sample_features(root_node_value, 0, D-1)
 
 ```{r}
 FONT_FAMILY <- "times new roman"
-
-df
 ```
 
 ## figure 2 IO
@@ -142,9 +140,8 @@ reproduce_figure_2_io <- function(d, gradient_colours) {
              colour = "white", fill = NA, size = 1)
   
   ggsave("figures/fig2_io.png")
+  
 }
-
-reproduce_figure_2_io(d, gradient_colours)
 ```
 
 ## figure 2 Vt
@@ -187,7 +184,48 @@ reproduce_figure_2_vt <- function(vt, gradient_colours) {
              colour = "white", fill = NA, size = 1)
   
   ggsave("figures/fig2_vt.png", width = 10, height = 8)
+  
 }
+```
+
+## figure 2 U
+
+```{r}
+reproduce_figure_2_u <- function(u, gradient_colours) {
+  
+  df <- melt(u)
+  df <- df[order(df$Var1, decreasing=FALSE),]
+  
+  row_names <- c("M", "F", "S", "B", "P")
+  df$Var1 <- factor(df$Var1, levels = 1:length(row_names), labels = row_names)
+  df$Var1 <- factor(df$Var1, levels = rev(levels(df$Var1)))
+  
+  ggplot(df, aes(Var2, Var1, fill = value)) + 
+    geom_tile(colour = "black", size = 0.7) +
+    gradient_colours +
+    scale_x_continuous(position = "top") +
+    theme_minimal() +
+    theme(
+      axis.title.x.top = element_text(vjust = 2, size = 22, family = FONT_FAMILY),
+      axis.title.x.bottom = element_blank(),
+      axis.title.y.left = element_text(vjust = 2, size = 22, family = FONT_FAMILY),
+      axis.ticks.x = element_blank(),
+      axis.ticks.y = element_blank(),
+      axis.text.y = element_text(size = 18, family = FONT_FAMILY, face = "italic"),
+      axis.text.x = element_text(size = 18, family = FONT_FAMILY, face = "italic"),
+      panel.grid.major = element_blank(),
+      panel.grid.minor = element_blank(),
+      legend.position = "none",
+    ) +
+    labs(x = "Modes", y = "Properties", fill = "") +
+    coord_fixed() +
+    annotate("rect", xmin = 0.5, xmax = ncol(u) + 0.5, ymin = 0.5, ymax = nrow(u) + 0.5, 
+             colour = "white", fill = NA, size = 1)
+  
+  ggsave("figures/fig2_u.png")
+  
+}
+
 ```
 
 ## Put figure 2 together 
@@ -198,19 +236,23 @@ s <- svd(d)
 
 norm_matrix <- function(matrix) {
   # max norm
-  norm <- max(matrix)
+  norm <- max(abs(matrix))
   return(matrix/norm)
 }
 
 # Unit norm and restrict to first three modes, as it is in Saxe et al. figure 2
-vt <- norm_matrix(t(s$v))[1:3,]
-u <- norm_matrix(s$u)[,1:3]
-s <- norm_matrix(diag(s$d))[1:3,1:3]
+# The paper multiplies both vt and u by -1 to get more intuitive visualisations
+vt <- norm_matrix(t(s$v)[1:3,]) * -1
+u <- norm_matrix(s$u[,1:3]) * -1
+sv <- norm_matrix(diag(s$d)[1:3,1:3])
 
 gradient_colours <- scale_fill_gradient2(low = "blue", high = "red", mid = "white", 
                                         midpoint = 0, limit = c(-1, 1), 
                                         breaks = c(-1, 0, 1))
 
+# Reproduce individual components of figure 2
+reproduce_figure_2_io(d, gradient_colours)
+reproduce_figure_2_u(u, gradient_colours)
 reproduce_figure_2_vt(vt, gradient_colours)
 
 
@@ -218,12 +260,13 @@ reproduce_figure_2_vt(vt, gradient_colours)
 
 
 ```{r}
-
-```
-
-```{r}
-t <- list()
-t["f"]
+df <- melt(u)
+df <- df[order(df$Var1, decreasing=FALSE),]
+row_names <- c("M", "F", "S", "B", "P")
+df$Var1 <- factor(df$Var1, levels = 1:length(row_names), labels = row_names)
+df$Var1 <- factor(df$Var1, levels = rev(levels(df$Var1)))
+  
+df
 ```
 
 Reproduce figure 5
