--- a/reproduction.Rmd
+++ b/reproduction.Rmd
@@ -207,7 +207,8 @@ reproduce_figure_2_u(u, gradient_colours)
 reproduce_figure_2_sv(sv, gradient_colours)
 reproduce_figure_2_vt(vt, gradient_colours)
 
-# Fuck it, just put the rest together in Canva. So annoying to do this with grids.
+# Fuck it, I'm just going to put the rest together in Canva. So annoying to do this programmatically with grids.
+# Link: https://www.canva.com/design/DAF0GHxXVdU/XqJsZz267k3bf0sJekw6GQ/edit?utm_content=DAF0GHxXVdU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
 
 ```
 
@@ -226,7 +227,7 @@ flip_feature <- function(flip_probability) {
 }
 
 sample_feature_vector <- function(node_value, depth, max_depth, e) {
-  # Sample feature vector from a branching diffusion process
+  # Sample feature vector from a branching diffusion process with depth 'max_depth' and flip probability 'e'
   
   left_node_value <- flip_feature(e) * node_value
   right_node_value <- flip_feature(e) * node_value
@@ -236,7 +237,7 @@ sample_feature_vector <- function(node_value, depth, max_depth, e) {
   } else if (depth + 1== max_depth) {
     return(c(left_node_value, right_node_value))
   } else {
-    return(c(sample_features(left_node_value, depth + 1, max_depth), sample_features(right_node_value, depth + 1, max_depth)))
+    return(c(sample_feature_vector(left_node_value, depth + 1, max_depth, e), sample_feature_vector(right_node_value, depth + 1, max_depth, e)))
   }
 }
 
@@ -290,9 +291,26 @@ initialise_network <- function(N1, N2, N3) {
 
 forward <- function(network, x) {
   # Forward propagation through our network
+  
   z2 <- network$W21 %*% x
   z3 <- network$W32 %*% z2
+  
   return(z3)
+}
+
+backward <- function(network, x, y_pred, y_true, learning_rate) {
+  # Back propagation through our network
+  
+  # Calculate gradients
+  dW21 <- t(network$W32) %*% (y_true - y_pred) %*% t(x)
+  dW32 <- (y_true - y_pred) %*% t(network$W21 %*% x)
+  
+  # Update weights
+  network$W21 <- network$W21 + learning_rate * dW21
+  network$W32 <- network$W32 + learning_rate * dW32
+  
+  return(network)
+  
 }
 
 squared_error_loss <- function(y, y_true) {
@@ -320,13 +338,8 @@ train_network <- function(network, data, learning_rate, num_epochs) {
       loss <- squared_error_loss(y_pred, y_true)
       loss_sum <- loss_sum + loss
       
-      # Calculate gradients
-      dW21 <- t(network$W32) %*% (y_true - y_pred) %*% t(x)
-      dW32 <- (y_true - y_pred) %*% t(network$W21 %*% x)
-      
-      # Update weights
-      network$W21 <- network$W21 + learning_rate * dW21
-      network$W32 <- network$W32 + learning_rate * dW32
+      # Backprop
+      network <- backward(network, x, y_pred, y_true, learning_rate)
       
     }
     
@@ -366,22 +379,43 @@ train_data <- sample_train_data(D, e, N)
 N1 <- 4  # Input layer size
 N2 <- 10  # Hidden layer size
 N3 <- 10000  # Output layer size
-LEARNING_RATE <- 0.00025
+LEARNING_RATE <- 0.00001
 NUM_EPOCHS <- 600
 
 # RUN TRAINING SIMS
 NUM_SIMULATIONS <- 10
 singular_values <- c()
 for (i in 1:NUM_SIMULATIONS) {
+  cat(sprintf("Simulation %d\n", i))
   svs <- simulate_weight_sv(train_data, N1, N2, N3, LEARNING_RATE, NUM_EPOCHS)
   svs <- do.call(rbind, svs)
   singular_values <- c(singular_values, list(svs))
+  cat("--------------------------------------------------\n")
 }
 
 ```
 
 ```{r}
-singular_values[[2]]
+long_data <- lapply(seq_along(singular_values), function(i) {
+  mat <- singular_values[[i]]
+  df <- melt(mat)
+  df$matrix_id <- i
+  names(df)[1:2] <- c("X", "Line")
+  df
+})
+combined_df <- do.call(rbind, long_data)
+
+ggplot(combined_df, aes(x = X, y = value, group = interaction(matrix_id, Line), color = "red")) +
+  geom_line() +
+  theme_minimal() +
+  theme(
+    legend.position = "none"
+  ) +
+  labs(color = "Line", x = "t (Epochs)", y = "Input-output mode strength")
+```
+
+```{r}
+combined_df
 ```
 
 ```{r}
