--- a/reproduction.Rmd
+++ b/reproduction.Rmd
@@ -379,7 +379,7 @@ train_data <- sample_train_data(D, e, N)
 N1 <- 4  # Input layer size
 N2 <- 10  # Hidden layer size
 N3 <- 10000  # Output layer size
-LEARNING_RATE <- 0.00001
+LEARNING_RATE <- 0.00025
 NUM_EPOCHS <- 600
 
 # RUN TRAINING SIMS
@@ -396,76 +396,66 @@ for (i in 1:NUM_SIMULATIONS) {
 ```
 
 ```{r}
+
+# CONVERT SIM SV's INTO PLOTTABLE FORMAT
 long_data <- lapply(seq_along(singular_values), function(i) {
   mat <- singular_values[[i]]
   df <- melt(mat)
   df$matrix_id <- i
+  df$line_type <- "Simulation"
   names(df)[1:2] <- c("X", "Line")
   df
 })
-combined_df <- do.call(rbind, long_data)
+simulation_df <- do.call(rbind, long_data)
 
-ggplot(combined_df, aes(x = X, y = value, group = interaction(matrix_id, Line), color = "red")) +
+# THEORETICAL CURVES
+SCALE <- 3.25 # This is so suss lmao
+tau <- 4 / LEARNING_RATE
+a0 <- 0.1
+ss <- svd(training_data)$d[1:3]
+theoretical_curves <- c()
+for (s in ss) {
+  tc <- c()
+  for (t in 1:NUM_EPOCHS) {
+    tc <- c(tc, s*exp(2*s*t*SCALE/tau)/(exp(2*s*t*SCALE/tau)-1+(s*SCALE/a0)))
+  }
+  theoretical_curves <- c(theoretical_curves, list(tc))
+}
+theoretical_matrix <- t(do.call(rbind, theoretical_curves))
+theoretical_df <- melt(theoretical_matrix)
+names(theoretical_df)[1:2] <- c("X", "Line")
+theoretical_df$matrix_id <- NUM_SIMULATIONS + 1
+theoretical_df$line_type <- "Theory"
+
+# COMBINE
+combined_df <- rbind(theoretical_df, simulation_df)
+
+# PLOT!
+ggplot(combined_df, aes(x = X, y = value, group = interaction(factor(line_type, levels = c("Simulation", "Theory")), matrix_id, Line), color = line_type, size = line_type)) +
   geom_line() +
   theme_minimal() +
+  scale_size_manual(values = c("Theory" = 2, "Simulation" = 0.5)) +
+  scale_color_manual(values = c("Theory" = "blue", "Simulation" = "red")) +
+  scale_x_continuous(breaks = seq(0, 601, by = 100), expand = c(0, 0), limits = c(0, 601)) +
+  scale_y_continuous(breaks = seq(0, 160, by = 50)) +
   theme(
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.text.x = element_text(size = TICK_FONT_SIZE*0.7), 
+    axis.text.y = element_text(size = TICK_FONT_SIZE*0.7), 
+    axis.title.x = element_text(size = TITLE_FONT_SIZE*0.7), 
+    axis.title.y = element_text(size = TITLE_FONT_SIZE*0.7),
+    axis.line = element_line(color = "black", size = 0.7),
+    axis.ticks = element_line(color = "black", size = 0.7),
     legend.position = "none"
   ) +
   labs(color = "Line", x = "t (Epochs)", y = "Input-output mode strength")
+
+ggsave("figures/fig3.png", width = 10, height = 7)
 ```
 
 ```{r}
-combined_df
-```
-
-```{r}
-#train(train_data, 0.01, 1000)
-
-# Define the neural network architecture
-N1 <- 4  # Input layer size
-N2 <- 10  # Hidden layer size
-N3 <- 10000  # Output layer size
-W21 <- matrix(rnorm(N2 * N1, mean = 0, sd = sqrt(0.001)), nrow = N2, ncol = N1) # Weight matrix connecting input to hidden
-W32 <- matrix(rnorm(N3 * N2, mean = 0, sd = sqrt(0.001)), nrow = N3, ncol = N2) # Weight matrix connecting hidden to output
-
-data <- train_data
-learning_rate <- 0.00025
-num_epochs <- 600
-
-singular_values <- c()
-    
-for (epoch in 1:num_epochs) {
-  
-  loss_sum <- 0
-  
-  for (d in data) {
-    
-    x <- d[1][[1]]
-    y_true <- d[2][[1]]
-    
-    # Forward pass
-    y_pred <- forward(x)
-    loss <- squared_error_loss(y_pred, y_true)
-    loss_sum <- loss_sum + loss
-    
-    # Calculate gradients
-    dW21 <- t(W32) %*% (y_true - y_pred) %*% t(x)
-    dW32 <- (y_true - y_pred) %*% t(W21 %*% x)
-    
-    # Update weights
-    W21 <- W21 + learning_rate * dW21
-    W32 <- W32 + learning_rate * dW32
-    
-  }
-  
-  cat(sprintf("Epoch: %d, Average loss: %.3f\n", epoch, loss_sum / length(data)))
-  
-  # Calculate singular values
-  sv <- svd(W32 %*% W21)$d[1:3]
-  singular_values <- c(singular_values, list(sv))
-
-}
-
+ss
 ```
 
 # Reproduce figure 5
